# debrISR

./: .gitignore  LICENSE  README.md
debrISR/: pyproject.toml
debrISR/src/debrisr/: __init__.py
experimental/epop_parser/: hello.py  prototype.ipynb  pyproject.toml
experimental/madrigal/: hello.py  madrigal.ipynb  pyproject.toml
